fix z-index error

--- a/scss/modules/dock.scss
+++ b/scss/modules/dock.scss
@@ -30,7 +30,8 @@
       // --scale: 1;
 
       &:nth-of-type(3)::after,
-      &:nth-of-type(4)::after {
+      &:nth-of-type(4)::after,
+      &:nth-of-type(9)::after {
         position: absolute;
         width: 4px;
         height: 4px;
