--- a/scss/modules/modal.scss
+++ b/scss/modules/modal.scss
@@ -32,6 +32,7 @@
       width: 100%;
       height: 1.5rem;
       // z-index: 1;
+      position: absolute;
 
       &__buttons {
         list-style-type: none;
