--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
   justify-content: center;
   align-items: center;
 }
-.dock__container__item:nth-of-type(3)::after, .dock__container__item:nth-of-type(4)::after {
+.dock__container__item:nth-of-type(3)::after, .dock__container__item:nth-of-type(4)::after, .dock__container__item:nth-of-type(9)::after {
   position: absolute;
   width: 4px;
   height: 4px;
@@ -162,6 +162,7 @@ header .utility__item:nth-of-type(1):active {
   border-bottom: 1px solid #ded9e0;
   width: 100%;
   height: 1.5rem;
+  position: absolute;
 }
 .modal--photoBooth .tab--photoBooth__buttons {
   list-style-type: none;
@@ -189,6 +190,10 @@ header .utility__item:nth-of-type(1):active {
   height: fit-content;
 }
 
+.modal--photoBooth .tab--photoBooth {
+  z-index: 1;
+}
+
 video {
   position: absolute;
   top: 0;
@@ -200,7 +205,6 @@ video {
   border-top: 1px solid #ded9e0;
   width: 100%;
   height: 3.5rem;
-  z-index: 1;
   position: absolute;
   bottom: 0;
   display: flex;
@@ -213,7 +217,6 @@ video {
   border-radius: 50%;
   border: 1px solid #ded9e0;
   background-color: #f7232b;
-  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -253,6 +256,7 @@ video {
   border-bottom: 1px solid transparent;
   width: 100%;
   height: 1.5rem;
+  position: absolute;
 }
 .modal--calculator .tab--calculator__buttons {
   list-style-type: none;
@@ -455,6 +459,7 @@ video {
   border-bottom: 1px solid #ded9e0;
   width: 100%;
   height: 1.5rem;
+  position: absolute;
 }
 .modal--reminders .tab--reminders__buttons {
   list-style-type: none;
@@ -487,7 +492,9 @@ video {
   box-sizing: border-box;
 }
 .modal--reminders .tab--reminders {
-  position: none;
+  position: relative;
+  height: 100%;
+  width: 200px;
 }
 .modal--reminders .tab--reminders .summary {
   display: flex;
